--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/gitananun/node_tutorial#readme",
   "devDependencies": {
+    "@types/node": "^16.0.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.4"
   }
 }
