--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "mongodb": "^3.6.9",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
   }
