--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^6.6.4"
   }
 }
