--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.13.2",
     "mysql2": "^2.2.5",
