env example set

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 APP_MODE='development'
 
-MONGO_URI='mongodb+srv://<username>:<password>@cluster0.d4jf0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+MONGO_URI='mongodb+srv://<username>:<password>@cluster0.d4jf0.mongodb.net/node-megashop'
+
+SENDGRID_API_KEY=
+MAIL_FROM=
